# hasura-ecommerce

./: docker-compose.yaml
superrag/: Dockerfile  __init__.py  pyproject.toml  server.py
superrag/superrag/: __init__.py  api.py  functions.py  hasura_utils.py  metadata_parser.py  openai_utils.py  query_generation.py
www/components/: AllOffers.tsx  Header.js
www/state/: FilterState.js
www/utils/: gql-zeus-query-hooks.ts
